[package]
name = "rsky-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
# external
bstr = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
cid = { version = "0.11", features = ["serde-codec"] }
color-eyre = "0.6"
derive_more = { version = "2", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
hashbrown = "0.15"
http = "1"
httparse = "1.10"
k256 = "0.13"
lru = "0.14"
magnetic = "2"
mimalloc = "0.1"
mio = { version = "1", features = ["os-ext", "os-poll"] }
multibase = "0.9"
p256 = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "hickory-dns", "http2", "json", "rustls-tls-webpki-roots-no-provider"] }
rs-car-sync = "0.4"
rtrb = "0.3"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_ipld_dagcbor = "0.6"
serde_json = "1"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
sled = { version = "0.34", features = ["compression"] }
thingbuf = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots", "url"] }
url = "2"
urlencoding = "2"
zerocopy = { version = "0.8", features = ["derive"] }

# internal
rsky-common = { workspace = true }
rsky-identity = { workspace = true }
