[package]
name = "rsky-wintermute"
version = "0.1.0"
edition = "2024"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "Monolithic indexer combining ingester, backfiller, and indexer"

[[bin]]
name = "wintermute"
path = "src/main.rs"

[[bin]]
name = "queue_backfill"
path = "src/bin/queue_backfill.rs"

[[bin]]
name = "fix_blob_refs"
path = "src/bin/fix_blob_refs.rs"

[dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
derive_more = { version = "2", features = ["full"] }
fjall = "2"
heed = "0.20"
futures = { version = "0.3", default-features = false, features = ["std"] }
iroh-car = "0.5.1"
mimalloc = "0.1"
rtrb = "0.3"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
sha2 = "0.10"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
thingbuf = "0.1"
thiserror = "2"
tokio = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.13"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "url"] }
tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots", "url"] }
url = "2"
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

rsky-common = { workspace = true }
rsky-crypto = { workspace = true }
rsky-identity = { workspace = true }
rsky-lexicon = { workspace = true }
rsky-repo = { workspace = true }
rsky-syntax = { workspace = true }
lexicon_cid = { workspace = true }
ipld-core = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "hickory-dns", "http2", "json", "rustls-tls-webpki-roots-no-provider"] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
